--- a/productos/templates/listar.html
+++ b/productos/templates/listar.html
@@ -1,1 +1,21 @@
 <!-- Crear el archivo listar.html -->
+{% extends "base.html" %}
+
+{% block title %} Listar Productos {% endblock %}
+
+{% block content%}
+<h1>Listar Productos</h1>
+<ul class="list-group">
+    {% for producto in productos %}
+    <li class="list-group-item"> 
+        {{ producto.nombre }} 
+    </li>
+    <li class="list-group-item"> 
+        {{ producto.precio }}
+    </li>
+    <li class="list-group-item"> 
+        {{ producto.cantidad }}
+    </li>
+    {% endfor %}
+</ul>
+{% endblock%}s
