--- a/productos/templates/listar.html
+++ b/productos/templates/listar.html
@@ -7,14 +7,20 @@
 <h1>Listar Productos</h1>
 <ul class="list-group">
     {% for producto in productos %}
-    <li class="list-group-item"> 
-        {{ producto.nombre }} 
+    <li class="list-group-item">
+        {{ producto.nombre }}
     </li>
-    <li class="list-group-item"> 
+    <li class="list-group-item">
         {{ producto.precio }}
     </li>
-    <li class="list-group-item"> 
+    <li class="list-group-item">
         {{ producto.cantidad }}
+    </li>
+    <li>
+        <a href="{% url 'editar_producto' producto.id %}" class="btn btn-primary btn-sm">Editar</a>
+    </li>
+    <li>
+        <a href="{% url 'borrar_producto' producto.id %}" class="btn btn-danger btn-sm" onclick="return confirm('¿Estás seguro de que deseas borrar este producto?');">Borrar</a>
     </li>
     {% endfor %}
 </ul>
