--- a/productos/templates/create.html
+++ b/productos/templates/create.html
@@ -8,15 +8,22 @@ Crear Productos
 
 <body>
     <h1>Crear Producto</h1>
-    <form method="POST">
+    <form method="POST" action="{% url 'crear_productos' %}">
         {% csrf_token %}
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre"><br>
-        <label for="precio">Precio:</label>
-        <input type="number" step="0.01" id="precio" name="precio"><br>
-        <label for="cantidad">Cantidad:</label>
-        <input type="number" id="cantidad" name="cantidad"><br>
-        <button type="submit">Crear</button>
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" name="nombre" value="{{ producto.nombre }}">
+        </div>
+        <div class="mb-3">
+            <label for="precio" class="form-label">Precio</label>
+            <input type="number" step="0.01" class="form-control" id="precio" name="precio"
+                value="{{ producto.precio }}">
+        </div>
+        <div class="mb-3">
+            <label for="cantidad" class="form-label">Cantidad</label>
+            <input type="number" class="form-control" id="cantidad" name="cantidad" value="{{ producto.cantidad }}">
+        </div>
+        <button type="submit" class="btn btn-primary">Crear</button>
     </form>
 </body>
 {% endblock%}
