--- a/productos/templates/listar.html
+++ b/productos/templates/listar.html
@@ -1,27 +1,29 @@
-<!-- Crear el archivo listar.html -->
 {% extends "base.html" %}
 
 {% block title %} Listar Productos {% endblock %}
 
-{% block content%}
+{% block content %}
 <h1>Listar Productos</h1>
-<ul class="list-group">
-    {% for producto in productos %}
-    <li class="list-group-item">
-        {{ producto.nombre }}
-    </li>
-    <li class="list-group-item">
-        {{ producto.precio }}
-    </li>
-    <li class="list-group-item">
-        {{ producto.cantidad }}
-    </li>
-    <li>
-        <a href="{% url 'editar_producto' producto.id %}" class="btn btn-primary btn-sm">Editar</a>
-    </li>
-    <li>
-        <a href="{% url 'borrar_producto' producto.id %}" class="btn btn-danger btn-sm" onclick="return confirm('¿Estás seguro de que deseas borrar este producto?');">Borrar</a>
-    </li>
-    {% endfor %}
-</ul>
-{% endblock%}s
+<br>
+<a href="{% url 'crear_productos' %}" class="btn btn-primary btn-sm">Crear Producto</a>
+<div class="container mt-4">
+    <div class="row">
+        {% for producto in productos %}
+        <div class="col-md-4 mb-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">
+                        Precio: {{ producto.precio }}<br>
+                        Cantidad: {{ producto.cantidad }}
+                    </p>
+                    <a href="{% url 'editar_producto' producto.id %}" class="btn btn-primary btn-sm">Editar</a>
+                    <a href="{% url 'borrar_producto' producto.id %}" class="btn btn-danger btn-sm"
+                       onclick="return confirm('¿Estás seguro de que deseas borrar este producto?');">Borrar</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
